--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.5",
+    "request": "^2.88.2"
   },
   "devDependencies": {}
 }
