--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongoose": "^5.10.9",
     "nodemon": "^2.0.5",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuidv1": "^1.6.14"
   },
   "devDependencies": {}
 }
